# policast

./: .dockerignore  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SECURITY.md  docker-compose.yml
.cursor/plans/: cedar-templates-and-tags_9f2a3b14.plan.md  cedar-to-cel_compiler_poc_8786d334.plan.md  datafusion-governance-delta-rs_ac3cd235.plan.md
.cursor/rules/: branching-rule.mdc  testing-discipline.mdc
.cursor/skills/policy-qa-generator/: SKILL.md
.cursor/skills/tag-columns/: SKILL.md  tag-vocabulary.md
.cursor/skills/tag-columns/templates/: column_mask_by_financial.cedar  column_mask_by_phi.cedar  column_mask_by_pii.cedar  row_filter_by_clinical.cedar
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/policast-core/: Cargo.toml
crates/policast-core/src/: cedar_parser.rs  cel_emitter.rs  codegen.rs  error.rs  lib.rs  main.rs  model.rs  policy_manifest.rs  policy_store.rs  profile.rs  scaffold.rs
crates/policast-datafusion/: Cargo.toml
crates/policast-datafusion/src/: cel_filter.rs  cel_to_expr.rs  delta.rs  governance_table.rs  identity.rs  lib.rs  uc.rs
crates/policast-datafusion/tests/: integration_test.rs
crates/policast-uc/: Cargo.toml
crates/policast-uc/src/: backend.rs  cache.rs  cdc.rs  client.rs  error.rs  lib.rs  seed.rs  sidecar.rs  signature.rs  store.rs  types.rs  uc_bootstrap.rs
docker/: .env.example  Dockerfile  README.md  entrypoint-demo.sh  entrypoint-spark.sh
docker/bootstrap/: uc-full-init.sh
docs/: ci.md
docs/delta/: overview.md
docs/unity-catalog/: compose.md  overview.md
examples/: run_datafusion.rs  run_datafusion_delta.rs  run_datafusion_uc.rs  run_datafusion_uc_http.rs  run_spark.scala
examples/policies/: column_mask.cedar  deny_legal_hold.cedar  manifest.json  row_filter.cedar
examples/profiles/: column_mask_by_tag.cedar  deny_override_legal_hold.cedar  row_filter.cedar
examples/uc/: README.md
examples/uc/ddl/: 01_create_catalog.sql  02_policies.sql  03_manifest.sql  04_bindings.sql  05_seed.sql  06_tags.sql
examples/uc/properties/: patients.properties.json
examples/uc/store/: bindings.json  manifest.json  policies.json  tags.json
policast-core/: AGENTS.md  Cargo.toml
policast-core/src/: cedar_parser.rs
policast-datafusion/: AGENTS.md  Cargo.toml
policast-datafusion/src/: cel_filter.rs
policast-datafusion/tests/: integration_test.rs
policast-spark/: AGENTS.md  build.sbt
policast-spark/src/main/resources/examples/data/: patients.csv
policast-spark/src/main/resources/examples/policies/: manifest.json
policast-spark/src/main/scala/com/policast/spark/: CelEvaluator.scala  PolicastDriverPlugin.scala  PolicastExtensions.scala  PolicastOptimizerRule.scala  PolicastPlugin.scala  PolicyManifest.scala  QueryIdentity.scala
policast-spark/src/main/scala/com/policast/spark/examples/: RunSpark.scala
policast-spark/src/test/scala/com/policast/spark/: CelEvaluatorSpec.scala  PolicastEnforcementSpec.scala  PolicyManifestSpec.scala
policast-uc/: Cargo.toml
policast-uc/src/: backend.rs  cache.rs  client.rs  seed.rs  sidecar.rs  store.rs  uc_bootstrap.rs
proto/policast/v1/: policast.proto
research/: README.md  cedar-open-lakehouse.md  protobuf-manifest.md  smt-invariants.md  unity-catalog-policy-store.md
scripts/: ci-smoke.sh  compile-policies.sh
