[workspace]
members = [
    "crates/*",
]
resolver = "2"

# Shared package metadata. Member crates opt in with
# `version.workspace = true` (etc.) so version/edition/license are
# bumped in one place.
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# Single source of truth for third-party dependency versions. Member
# crates reference these with `dep = { workspace = true }` and may add
# crate-specific `features`/`optional` on top (features are unioned).
[workspace.dependencies]
cedar-policy = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1" }
clap = { version = "4", features = ["derive"] }
cel-interpreter = "0.8"
cel-parser = "0.7"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
lru = "0.12"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
# Pinned together: deltalake-core's transitive `chrono` pin is exact, so a
# mismatched deltalake anywhere in the workspace (even behind an optional
# feature) makes the lockfile unresolvable.
datafusion = "53"
deltalake = { version = "0.32.3", features = ["datafusion"] }
# Dev-only shared deps.
pretty_assertions = "1"
tempfile = "3"

# Shared lint configuration. Member crates opt in with
# `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "warn"
