[package]
name = "policast-core"
version = "0.1.0"
edition = "2021"
description = "Compile Cedar policies into CEL expressions for portable data governance"
license = "Apache-2.0"

[[bin]]
name = "policast"
path = "src/main.rs"

[dependencies]
cedar-policy = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"
