[package]
name = "policast-datafusion"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DataFusion integration for policast-cel governance policies"

[lints]
workspace = true

[features]
default = []
delta = ["dep:deltalake"]
uc    = ["dep:policast-uc", "policast-uc/client"]

[dependencies]
policast-core = { path = "../policast-core" }
policast-uc   = { path = "../policast-uc", optional = true, default-features = false }
datafusion = { workspace = true }
deltalake = { workspace = true, optional = true }
cel-interpreter = { workspace = true }
cel-parser = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[[example]]
name = "run_datafusion"
path = "../../examples/run_datafusion.rs"

[dev-dependencies]
tempfile = { workspace = true }

[[example]]
name = "run_datafusion_delta"
path = "../../examples/run_datafusion_delta.rs"
required-features = ["delta"]

[[example]]
name = "run_datafusion_uc"
path = "../../examples/run_datafusion_uc.rs"
required-features = ["uc", "delta"]

[[example]]
name = "run_datafusion_uc_http"
path = "../../examples/run_datafusion_uc_http.rs"
required-features = ["uc", "delta"]
