[package]
name = "policast-uc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unity Catalog policy store + resolver sidecar for policast-cel"

[lints]
workspace = true

[features]
default      = ["client"]
client       = ["dep:reqwest"]
sidecar      = ["dep:axum", "dep:tower", "dep:tower-http", "dep:clap"]
# `uc-bootstrap` enables the Unity Catalog bootstrap backend. It pulls
# in `deltalake` + `datafusion` so the sidecar can open governance
# Delta tables directly and snapshot them into memory. This is opt-in
# because the dep fan-out is significant (tens of transitive crates);
# the flat-file `FileBackend` remains the default sidecar backend.
uc-bootstrap = ["dep:deltalake", "dep:datafusion", "dep:reqwest"]

[dependencies]
policast-core = { path = "../policast-core" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
lru = { workspace = true }
time = { workspace = true }
parking_lot = { workspace = true }

# Client dependencies (gated by `client` feature)
reqwest = { workspace = true, optional = true }

# Sidecar dependencies (gated by `sidecar` feature)
axum       = { workspace = true, optional = true }
tower      = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
clap       = { workspace = true, optional = true }

# UC bootstrap backend dependencies (gated by `uc-bootstrap` feature).
# Matches the `deltalake 0.25` / `datafusion 46` pinning used by
# `policast-datafusion`; see the revert in commit 7f84d9b for the
# conflict story with `deltalake 0.31` + `datafusion 52`.
deltalake  = { workspace = true, optional = true }
datafusion = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }

[[bin]]
name = "policast-uc-sidecar"
path = "src/bin/sidecar.rs"
required-features = ["sidecar"]

[[bin]]
name = "policast-uc-seed"
path = "src/bin/seed.rs"
required-features = ["sidecar", "uc-bootstrap"]
